--- a/style.css
+++ b/style.css
@@ -38,6 +38,10 @@ nav {
 	font-size: 50px!important;
 	padding-left: 2%!important;
 }
+.font {
+	font-family: 'Gruppo', cursive!important;
+
+}
 .project-images {
 	height: 275px;
 	width: 275px;
