--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@
 	width: 100%;
 	overflow: auto;
 	box-shadow: 0 8px 6px -6px black;
+	margin-bottom: 150px;
 }
 
 #namePlate {
@@ -13,6 +14,7 @@
 	border: 20px solid white;
 	/*padding-top: 21%;*/
 	font-weight: 1000;
+	text-shadow: 1px 1px 10px #000000;
 }
 
 a {
@@ -40,7 +42,15 @@ nav {
 }
 .font {
 	font-family: 'Gruppo', cursive!important;
-
+}
+.info-font {
+	font-size: 20px;
+}
+.lobster {
+	font-family: 'Lobster', cursive!important;
+	text-transform: none!important;
+	/*padding-top: 12%;*/
+	font-size: 40px!important;
 }
 .project-images {
 	height: 275px;
@@ -52,6 +62,10 @@ nav {
 	height: 40px;
 	width: 40px;
 }
+.git-logo {
+	height: 47px;
+	width: 50px;
+}
 .skillP {
 	display: inline-block;
 }
@@ -62,11 +76,14 @@ footer {
 .contact {
 	color: white;
 }
+.contact-logo {
+	margin: 0 50px 0 0;
+}
 .fade {
   opacity: 1;
 }
 .contactInfo {
-	padding-top: 60px;
+	padding-top: 15%;
 }
 .footer {
 	font-family: 'Gruppo', cursive;
@@ -83,18 +100,24 @@ footer {
 	height: 100px;
 	width: 50vw;
 }
-/*.vl {
-	padding-left: 50%;
-    border-left: 2px solid black;
-    height: 500px;
-    align-self: center;*/
-/*    position: absolute;
-    background-color: black;
-    width: 2px;
-    top: 91px;
-    bottom: 0px;*/
-    /*left: 50%;*/
-/*}*/
+
+.project-btn {
+	border: 4px solid black;
+	padding: 10px 20px;
+}
+.enter-project {
+	width: 300px!important;
+	height: 150px!important;
+}
+
+/*MODAL STUFF*/
+
+.modal { 
+	width: 75% !important; 
+	max-height: 90% !important; 
+	} 
+} 
+
 
 
 
