--- a/style.css
+++ b/style.css
@@ -107,7 +107,7 @@ footer {
 
 .project-btn {
 	border: 4px solid black;
-	/*padding: 10px 20px;*/
+	padding: 10px 20px;
 }
 .enter-project {
 	width: 300px!important;
