--- a/style.css
+++ b/style.css
@@ -117,7 +117,7 @@ nav {
 
 .proj1 {
 	/*background-color: rgba(70, 70, 70, .3);*/
-	width: 102vw;
+	width: 100vw;
 	height: 650px;
 }
 
@@ -125,12 +125,22 @@ nav {
 	border: 4px solid black;
 	padding: 10px 20px;
 }
-
+/*
 .project-images {
 	height: 275px;
 	width: 275px;
 	box-shadow: 0 8px 6px -6px black;
-	/*margin-left: 25px;*/
+	margin-left: 25px;
+}*/
+
+.projectImg {
+	width: 100%!important;
+	height: auto;
+}
+
+.rightHandImg {
+	float: right;
+	width: 50%!important;
 }
 
 .skillLogo {
@@ -163,6 +173,35 @@ nav {
 	border-left: 10px solid black;
 	height: 1000px;
 	margin-left: 10%;
+}
+
+
+
+/*FOR RESPONSIVENESS*/
+
+/* Extra small devices (phones, 600px and down) */
+@media only screen and (max-width: 600px) {
+	#namePlate {
+		font-size: 20vh;
+		border: none;
+	}
+	.name {
+		height: 200px;
+		margin-bottom: 100px;
+	}
+	.
+	.projectImg {
+		height: 50vh;
+		width: auto;
+		float: none;
+	}
+	.project-btn {
+
+	}
+	.rightHandImg {
+		width: 100%!important;
+	}
+
 }
 
 
