--- a/style.css
+++ b/style.css
@@ -1,11 +1,11 @@
 /*.about {
 	background-image: url('images/bw2.jpg')
 }*/
-/*a {
+a {
 	font-family: 'Gruppo', cursive;
 	color: black!important;
 	font-size: 20px!important;
-}*/
+}
 
 .brand-logo {
 	font-family: 'Lobster', sans-serif;
