took away box shadow on nav

--- a/style.css
+++ b/style.css
@@ -8,9 +8,12 @@ a {
 }
 
 .brand-logo {
-	font-family: 'Lobster', sans-serif;
-	font-size: 50px!important;
-	padding-left: 2%!important;
+	/*font-family: 'Lobster', sans-serif;
+	font-size: 50px!important;*/
+	height: 7vh;
+	width: 7vw;
+	padding-left: 2vh!important;
+	padding-top: 2vh!important;
 }
 
 .contact {
